si se actualiza

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <p>
         hola a todos este es mi primer sitio web sigueme en youtube como Miguel Paz.
-        sera que entonces si se va actualizando?
+        sera que entonces si se va actualizando?, actulizacion si se actualiza jaja 
     </p>
 </body>
 </html>
